<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_general"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/label_general_update_freq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/label_general_update_freq"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/output_general_update_freq"
        android:inputType="number"
        android:maxLength="5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/label_general_update_freq"
        android:gravity="center"
        android:hint="@string/hint_general_update_freq"
        android:focusable="false"/>

    <TextView
        android:id="@+id/label_tablet_handedness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/output_general_update_freq"
        android:text="@string/label_general_handedness"
        android:textStyle="bold"/>

    <LinearLayout
        android:baselineAligned="false"
        android:id="@+id/layout_handedness_selection"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/label_tablet_handedness">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/btn_tablet_handedness_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="10dp">

            <TextView
                android:id="@+id/label_tablet_handedness_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/label_general_handedness_left"
                android:textStyle="bold"/>

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/btn_tablet_handedness_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="10dp">

            <TextView
                android:id="@+id/label_tablet_handedness_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/label_general_handedness_right"
                android:textStyle="bold"/>

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/label_general_max_inventory_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/layout_handedness_selection"
        android:text="@string/label_general_max_inventory_quantity"
        android:layout_marginTop="50dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/output_general_max_inventory_quantity"
        android:inputType="number"
        android:maxLength="6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/label_general_max_inventory_quantity"
        android:gravity="center"
        android:hint="@string/hint_general_max_inventory_quantity"
        android:focusable="false"/>

    <TextView
        android:id="@+id/label_inventory_day_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/output_general_max_inventory_quantity"
        android:layout_marginTop="50dp"
        android:text="@string/label_general_last_inventory_indicators"
        android:textStyle="bold"/>

    <LinearLayout
        android:baselineAligned="false"
        android:id="@+id/layout_inventory_day_indicator"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/label_inventory_day_indicator">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/layout_inventory_day_indicator_below"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/label_general_last_inventory_indicators_under"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/label_general_last_inventory_indicators_under"
                android:textColor="@color/menu_green"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/output_general_last_inventory_indicators_under"
                android:inputType="number"
                android:maxLength="3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/label_general_last_inventory_indicators_under"
                android:gravity="center"
                android:hint="@string/hint_general_last_inventory_indicators_under"
                android:focusable="false"/>

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/layout_inventory_day_indicator_above"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/label_general_last_inventory_indicators_over"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/label_general_last_inventory_indicators_over"
                android:textColor="@color/red"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/output_general_last_inventory_indicators_over"
                android:inputType="number"
                android:maxLength="3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/label_general_last_inventory_indicators_over"
                android:gravity="center"
                android:hint="@string/hint_general_last_inventory_indicators_over"
                android:focusable="false"/>

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>