<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/label_total_products"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/label_total_products"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/output_total_products"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/label_total_products"
        android:clickable="false"/>

    <TextView
        android:id="@+id/label_total_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/output_total_products"
        android:text="@string/label_total_value"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/output_total_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/label_total_value"
        android:clickable="false"
        android:text="1 000 000 kr"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/menu_white">

        <TextView
            style="@style/ButtonStyleLookalike"
            android:id="@+id/label_menu_home"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="false" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/btn_storage_menu_products"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/label_menu_home"
            android:text="@string/btn_storage_menu_products" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/layout_inventory_menu"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_storage_menu_products"
            android:orientation="horizontal">

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/btn_storage_menu_inventory"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:text="@string/btn_storage_menu_inventory" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/btn_inventory_menu_fast"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0.5"
                android:text="@string/btn_inventory_menu_fast"
                android:textStyle="bold"
                android:visibility="gone" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/btn_inventory_menu_cancel"
                android:layout_height="50dp"
                android:layout_width="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/btn_inventory_menu_cancel"
                android:visibility="gone" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/btn_inventory_menu_full"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0.5"
                android:text="@string/btn_inventory_menu_full"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>


        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/btn_storage_menu_delivery"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/layout_inventory_menu"
            android:layout_marginBottom="5dp"
            android:text="@string/btn_storage_menu_delivery" />

    </RelativeLayout>
</RelativeLayout>