<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_server"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/label_server_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/label_server_status"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/output_server_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/label_server_status"
        android:layout_marginTop="10dp"
        android:text="NOT CONNECTED"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/label_general_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/output_server_status"
        android:text="@string/label_server_ip"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/output_server_ip"
        android:digits="0123456789."
        android:inputType="text"
        android:maxLength="35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/label_general_ip"
        android:textStyle="bold"
        android:focusable="false"/>


    <TextView
        android:id="@+id/label_general_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/output_server_ip"
        android:layout_marginTop="30dp"
        android:text="@string/label_server_port"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/output_server_port"
        android:inputType="number"
        android:maxLength="5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/label_general_port"
        android:textStyle="bold"
        android:focusable="false"/>

    <TextView
        android:id="@+id/label_general_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/output_server_port"
        android:layout_marginTop="30dp"
        android:text="@string/label_server_password"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/output_server_password"
        android:inputType="textPassword"
        android:maxLength="35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/label_general_password"
        android:textStyle="bold"
        android:focusable="false"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/menu_white">

        <TextView
            style="@style/ButtonStyleLookalike"
            android:id="@+id/label_menu_home"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="false" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/btn_reconnect"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/label_menu_home"
            android:text="@string/btn_test_server" />

    </RelativeLayout>

</RelativeLayout>